modified:   dashboard/forms.py 	modified:   dashboard/migrations/0001_initial.py 	modified:   dashboard/models.py 	deleted:    dashboard/templates/dashboard/_chart.html 	modified:   dashboard/templates/dashboard/chart_add.html 	renamed:    dashboard/templates/dashboard/_chart_card.html -> dashboard/templates/dashboard/chart_card.html 	modified:   dashboard/templates/dashboard/chart_edit.html 	modified:   dashboard/templates/dashboard/chart_list.html 	modified:   dashboard/templates/dashboard/dashboard.html 	modified:   dashboard/templates/dashboard/index.html 	new file:   dashboard/templates/dashboard/index_list.html 	modified:   dashboard/urls.py 	modified:   dashboard/views.py 	modified:   static/css/main.css 	new file:   static/js/chart.js 	modified:   telecom/models.py 	modified:   telecom/templates/telecom/index_list.html 	modified:   telecom/templates/telecom/line/line_add.html 	modified:   telecom/templates/telecom/line/line_details.html 	modified:   telecom/templates/telecom/line/line_edit.html 	modified:   telecom/templates/telecom/line/line_list.html 	new file:   telecom/templates/telecom/param/index_list.html 	modified:   telecom/templates/telecom/param/line/plan_add.html 	modified:   telecom/templates/telecom/param/line/plan_edit.html 	modified:   telecom/templates/telecom/param/line/plan_list.html 	modified:   telecom/templates/telecom/param/line/status_add.html 	modified:   telecom/templates/telecom/param/line/status_edit.html 	modified:   telecom/templates/telecom/param/line/status_list.html 	modified:   telecom/templates/telecom/param/line/status_rfp_add.html 	modified:   telecom/templates/telecom/param/line/status_rfp_edit.html 	modified:   telecom/templates/telecom/param/line/status_rfp_list.html 	modified:   telecom/templates/telecom/param/smartphone/model_add.html 	modified:   telecom/templates/telecom/param/smartphone/model_edit.html 	modified:   telecom/templates/telecom/param/smartphone/model_list.html 	modified:   telecom/templates/telecom/pa

--- a/dashboard/templates/dashboard/chart_card.html
+++ b/dashboard/templates/dashboard/chart_card.html
@@ -6,7 +6,7 @@
             'chart_{{qs_title}}', 'check_{{qs_title}}'{%for total in qs_total%}, {{total}}{%endfor%});
     });
 </script>
-<div class="card bg-light dash-shadow border-secondary px-3 py-3">
+<div class="card bg-light dash-shadow border-secondary px-3 py-3 overflow-auto">
     <div class="d-flex justify-content-between">
         <h5 class="card-title">{{qs_title}}</h5>
     </div>
