--- a/telecom/templates/telecom/vivobox/vivobox_details.html
+++ b/telecom/templates/telecom/vivobox/vivobox_details.html
@@ -1,53 +1,42 @@
-{% extends 'base.html' %}
+{% extends 'details.html' %}
 
 {% block title %}Detalhes do VivoBox | Sapore{% endblock %}
 
-{% block content %}
-<div class="d-flex flex-row-reverse">
-    <a class="btn btn-primary mt-2" href="{% url 'vivobox_list' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z"/>
-    </svg> Voltar</a>
-</div>
-<h1 class="mt-1">VivoBox</h1>
-<div>
-    <div class="row">
-        <div class="col">
-            <dt>Usuário</dt>
-            <dd>{% if vivobox.name %}{{vivobox.name}}{% else %}-{% endif %}</dd>
-            <dt>Filial</dt>
-            <dd>{% if vivobox.branch %}{{vivobox.branch}}{% else %}-{% endif %}</dd>
-            <dt>Status</dt>
-            <dd>{% if vivobox.status %}{{vivobox.status}}{% else %}-{% endif %}</dd>
-        </div>
-        <div class="col">
-            <dt>Número</dt>
-            <dd>{% if vivobox.number %}
-                <a href="{% url 'line_details' vivobox.line_id %}">{{vivobox.number}}</a>
-                {% else %}-{% endif %}</dd>
-            <dt>Modelo</dt>
-            <dd>{% if vivobox.obj_model %}{{vivobox.obj_model}}{% else %}-{% endif %}</dd>
-            <dt>Autorização</dt>
-            <dd>{% if vivobox.auth_attachment == 'False' or not vivobox.auth_attachment %}-
-                {% else %}<a href="/media/{{vivobox.auth_attachment}}">Arquivo</a>{% endif %}</dd>
-        </div>
-        <div class="col">
-            <dt>IMEI 1</dt>
-            <dd>{% if vivobox.imei_1 %}{{vivobox.imei_1}}{% else %}-{% endif %}</dd>
-            <dt>Nota Fiscal</dt>
-            <dd>{% if vivobox.receipt %}{{vivobox.receipt}}{% else %}-{% endif %}</dd>
-        </div>
-        <div class="col">
-            <dt>IMEI 2</dt>
-            <dd>{% if vivobox.imei_2 %}{{vivobox.imei_2}}{% else %}-{% endif %}</dd>
-            <dt>Data da Última Atualização</dt>
-            <dd>{% if vivobox.date_update %}{{vivobox.date_update|date:'d/m/Y'}}{% else %}-{% endif %}</dd>
-        </div>
-    </div>
-</div>
-<br>
-<a class="btn btn-primary" href="{% url 'vivobox_edit' vivobox.id %}">
-    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-    </svg> Editar</a>
-{% endblock %}
+{%block url_back%}{% url 'vivobox_list' %}{%endblock%}
+{%block details_title%}Vivobox{%endblock%}
+{%block url_edit%}{% url 'vivobox_edit' vivobox.id %}{%endblock%}
+
+{%block column1%}
+    <dt>Usuário</dt>
+    <dd>{% if vivobox.name %}{{vivobox.name}}{% else %}-{% endif %}</dd>
+    <dt>Filial</dt>
+    <dd>{% if vivobox.branch %}{{vivobox.branch}}{% else %}-{% endif %}</dd>
+    <dt>Status</dt>
+    <dd>{% if vivobox.status %}{{vivobox.status}}{% else %}-{% endif %}</dd>
+{%endblock%}
+
+{%block column2%}
+    <dt>Número</dt>
+    <dd>{% if vivobox.number %}
+        <a href="{% url 'line_details' vivobox.line_id %}">{{vivobox.number}}</a>
+        {% else %}-{% endif %}</dd>
+    <dt>Modelo</dt>
+    <dd>{% if vivobox.obj_model %}{{vivobox.obj_model}}{% else %}-{% endif %}</dd>
+    <dt>Autorização</dt>
+    <dd>{% if vivobox.auth_attachment == 'False' or not vivobox.auth_attachment %}-
+        {% else %}<a href="/media/{{vivobox.auth_attachment}}">Arquivo</a>{% endif %}</dd>
+{%endblock%}
+
+{%block column3%}
+    <dt>IMEI 1</dt>
+    <dd>{% if vivobox.imei_1 %}{{vivobox.imei_1}}{% else %}-{% endif %}</dd>
+    <dt>Nota Fiscal</dt>
+    <dd>{% if vivobox.receipt %}{{vivobox.receipt}}{% else %}-{% endif %}</dd>
+{%endblock%}
+
+{%block column4%}
+    <dt>IMEI 2</dt>
+    <dd>{% if vivobox.imei_2 %}{{vivobox.imei_2}}{% else %}-{% endif %}</dd>
+    <dt>Data da Última Atualização</dt>
+    <dd>{% if vivobox.date_update %}{{vivobox.date_update|date:'d/m/Y'}}{% else %}-{% endif %}</dd>
+{%endblock%}
