--- a/templates/partials/_confirmation.html
+++ b/templates/partials/_confirmation.html
@@ -10,7 +10,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                <a class="btn btn-primary" href="{{url_confirm}}{{object.id}}">Confirmar</a>
+                <a class="btn btn-danger" href="{{url_confirm}}{{object.id}}">Confirmar</a>
             </div>
         </div>
     </div>
