--- a/telecom/templates/telecom/line/line_list.html
+++ b/telecom/templates/telecom/line/line_list.html
@@ -1,6 +1,6 @@
 {% extends 'telecom/index_list.html' %}
 
-{% block title %}Lista de Linhas | Sapore{% endblock %}
+{% block title %}Linhas | Sapore{% endblock %}
 
 {%block list_title%}Linhas {%endblock%}
 
@@ -9,6 +9,9 @@
 {% block url_add %}{% url 'line_add' %}{% endblock %}
 {% block url_list %}{% url 'line_list' %}{% endblock %}
 {% block url_search %}{% url 'line_search' %}{% endblock %}
+
+{%block url_edit%}{% url 'line_edit' object.id %}{%endblock%}
+{%block url_details%}{% url 'line_details' object.id %}{%endblock%}
 
 {% block filter_form %}
 <div class="col-md-6">
@@ -61,24 +64,20 @@
 </div>
 {% endblock %}
 
-{% block table_head %}
-<th scope="col"><label>Operadora</label></th>
-<th scope="col"><label>Linha</label></th>
-<th scope="col"><label>Nome</label></th>
-<th scope="col"><label>Filial</label></th>
-<th scope="col"><label>Status</label></th>
+{% block list_th %}
+    <th scope="col"><label>Operadora</label></th>
+    <th scope="col"><label>Linha</label></th>
+    <th scope="col"><label>Nome</label></th>
+    <th scope="col"><label>Filial</label></th>
+    <th scope="col"><label>Status</label></th>
 {%endblock%}
 
-{% block table_body %}
-{% for line in lines %}
-<tr>
-    <td>{{line.telecom}}</td>
-    <td><a href="{% url 'line_details' line.id %}">{{line.number}}</a></td>
-    <td>{{line.name}}</td>
-    <td>{{line.branch}}</td>
-    <td>{{line.status}}</td>
-</tr>
-{% endfor %}
+{% block list_tb %}
+    <td>{{object.telecom}}</td>
+    <td>{{object.number}}</td>
+    <td>{{object.name}}</td>
+    <td>{{object.branch}}</td>
+    <td>{{object.status}}</td>
 {%endblock%}
             
                 
