--- a/telecom/templates/telecom/param/line/status_rfp_add.html
+++ b/telecom/templates/telecom/param/line/status_rfp_add.html
@@ -1,4 +1,4 @@
-{% extends 'partials/_index_form.html' %}
+{% extends 'form.html' %}
 
 {% block title %}Linhas | Adicionar Status RFP | Sapore{% endblock %}
 
