--- a/telecom/templates/telecom/param/vivobox/status_add.html
+++ b/telecom/templates/telecom/param/vivobox/status_add.html
@@ -1,4 +1,4 @@
-{% extends 'partials/_index_form.html' %}
+{% extends 'form.html' %}
 
 {% block title %}Vivobox | Adicionar Status | Sapore{% endblock %}
 
