--- a/telecom/templates/telecom/vivobox/vivobox_add.html
+++ b/telecom/templates/telecom/vivobox/vivobox_add.html
@@ -1,4 +1,4 @@
-{% extends 'partials/_index_form.html' %}
+{% extends 'form.html' %}
 
 {% block title %}Adicionar - Vivobox | Sapore{% endblock %}
 
